<resources>
    <!--TextView Text-->
    <string name="app_name">Dog Walker</string>
    <string name="welcome_1">Putting on a raincoat…</string>
    <string name="welcome_2">Barking at squirrels…</string>
    <string name="welcome_3">Sniffing a tree…</string>
    <string name="welcome_4">Getting a belly rub…</string>
    <string name="welcome_5">Drinking from the hose…</string>
    <string name="welcome_6">Looking for the leash…</string>
    <string name="welcome_7">Burying a bone…</string>
    <string name="welcome_8">Chasing seagulls…</string>
    <string name="welcome_9">Learning a new trick…</string>
    <string name="welcome_10">Playing fetch…</string>
    <string name="registration">Register a New Account</string>
    <string name="login">Login to Your Account</string>
    <string name="go_to_login">Already have an account?</string>
    <string name="verify_email_text">Resend Verification Email</string>
    <string name="reset_password_text">Send Password Reset Email</string>
    <string name="set_up_greeting_1">Welcome to Dog Walker</string>
    <string name="set_up_greeting_2">Please set up your profile by filling out the information below.</string>
    <string name="set_up_instruction_1">Are you a dog owner, a dog walker, or both?</string>
    <string name="set_up_instruction_1_owner">Approximately how long have you been a dog owner?</string>
    <string name="set_up_instruction_1_walker">Approximately long have you been a dog walker?</string>
    <string name="set_up_instruction_2">Upload a profile picture. Other users will be more likely to trust and interact with you!</string>
    <string name="set_up_instruction_3">Tell other users a little about yourself.</string>
    <string name="edit_dogs_title">My Dogs</string>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="no_answer">N/A</string>
    <string name="training_level">Level of Training:</string>
    <string name="health_and_needs">Relevant health information &amp; other needs:</string>
    <string name="walker_requirements">Requirements for dog walker:</string>
    <string name="dog_breed_title">Breed:</string>
    <string name="dog_age_title">Age:</string>
    <string name="about_me_title">About Me:</string>
    <string name="dog_training_title">Training:</string>
    <string name="dog_walk_length_title">Average Walk Length:</string>
    <string name="dog_needs_title">Health &amp; Other Needs:</string>
    <string name="dog_requirements_title">Walker Requirements:</string>
    <string name="new_walk_fragment_0_title">Are you looking for a dog walker or a dog owner?</string>
    <string name="new_walk_fragment_1_title_walker">Find a dog walker where?</string>
    <string name="new_walk_fragment_1_title_owner">Find a dog owner where?</string>
    <string name="search_filter_1">Search For:</string>
    <string name="search_filter_2">Distance:</string>
    <string name="search_no_results">No users found.</string>
    <string name="active">ACTIVE</string>
    <string name="walk_request">Walk Request</string>
    <string name="profile_i_am">I am a</string>
    <string name="bullet_dog_owner">&#8226; Dog Owner &#8226;</string>
    <string name="bullet_dog_walker">&#8226; Dog Walker &#8226;</string>
    <string name="my_dogs_title">My Dogs:</string>
    <string name="my_reviews_title">My Reviews:</string>
    <string name="rating_title">Overall Rating: </string>
    <string name="start_time_prompt">Approximately when should the walk begin?</string>
    <string name="message">Message:</string>
    <string name="compensation">Proposed Compensation:</string>
    <string name="which_dogs">Which dogs will be walked?</string>
    <string name="select_walk_role_title_1">Will</string>
    <string name="select_walk_role_title_2">or yourself be the dog walker?</string>
    <string name="select_walk_role_option_1"> will be walking my dogs.</string>
    <string name="select_walk_role_option_2_a">I will be walking</string>
    <string name="select_walk_role_option_2_b">\'s dogs.</string>
    <string name="dog_walker_colon">Dog Walker:</string>
    <string name="dogs_to_walk">Dogs:</string>
    <string name="request_time">When:</string>
    <string name="request_payment">Payment:</string>

    <!--Dates-->
    <string name="day">day</string>
    <string name="month">month</string>
    <string name="year">year</string>
    <string name="days">days</string>
    <string name="months">months</string>
    <string name="years">years</string>
    <string name="months_comma">months,</string>
    <string name="years_comma">years,</string>

    <!--Punctuation-->
    <string name="comma">,</string>
    <string name="period">.</string>

    <!--Button Text-->
    <string name="sign_up_button">Sign Up</string>
    <string name="login_button">Login</string>
    <string name="send_email_button">Submit</string>
    <string name="submit_profile_button">Submit Profile</string>
    <string name="start_walk">Start a New Walk</string>
    <string name="add_dog">Add Dog</string>
    <string name="save_dogs">Save Dogs</string>
    <string name="save_dog">Save Dog</string>
    <string name="save_user">Save Profile</string>
    <string name="verify_email_button">Send Verification Email</string>
    <string name="reset_password_button">Send Password Reset Email</string>
    <string name="send_button">Send</string>
    <string name="add_contact_button">Add Contact</string>
    <string name="send_message_button">Send Message</string>
    <string name="request_walk_for">Walk Request for</string>
    <string name="request_walk_from">Walk Request from</string>
    <string name="go_to_walk">View Current Walk</string>

    <!--EditText Hint Text-->
    <string name="email_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="name_hint">Profile Nickname</string>
    <string name="phone_hint">Phone Number</string>
    <string name="name">Name</string>
    <string name="dog_breed">Breed</string>
    <string name="birth_date">Birth Date</string>
    <string name="about">About Me</string>
    <string name="walk_length">Average Walk Distance</string>

    <!--Menu Text-->
    <string name="email_verification">Resend Verification Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_account">Create New Account</string>
    <string name="take_picture">Take New Picture</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="edit_account">My Account</string>
    <string name="view_profile">My Profile</string>
    <string name="view_messages">My Messages</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_dogs">Edit Dogs</string>
    <string name="find_users">Search Dog Lovers</string>
    <string name="view_contacts">View Contacts</string>
    <string name="view_walk_activity">View Walk Activity</string>
    <string name="logout">Logout</string>
    <string name="edit_dog">Edit Dog</string>
    <string name="remove_dog">Remove Dog</string>
    <string name="search">Search</string>
    <string name="notification">Notifications</string>

    <!--CheckBox Text-->
    <string name="dog_owner_text">I am a dog owner</string>
    <string name="dog_walker_text">I am a dog walker</string>
    <string name="active_dog_owner">Looking for Dog Walkers</string>
    <string name="active_dog_walker">Looking for Dogs to Walk</string>
    <string name="active_users_only">Active Users Only</string>

    <!--Spinner Text-->
    <string-array name="dog_walk_length_units">
        <item>Blocks</item>
        <item>Feet</item>
        <item>Meters</item>
        <item>Kilometers</item>
        <item>Miles</item>
    </string-array>

    <string-array name="currencies">
        <item>USD</item>
    </string-array>
    <string-array name="currency_symbols">
        <item>$</item>
    </string-array>

    <!--RadioButton Text-->
    <string name="untrained_description">Untrained <small>(no commands)</small></string>
    <string name="minimally_trained_description">Some training <small>(few commands, sometimes listens)</small></string>
    <string name="well_trained_description">Well Trained <small>(several commands, often listens)</small></string>
    <string name="expert_training_description">Expert <small>(many commands, always listens)</small></string>
    <string name="untrained">Untrained</string>
    <string name="minimally_trained">Some training</string>
    <string name="well_trained">Well Trained</string>
    <string name="expert_training">Expert</string>
    <string name="unknown_training">Unknown</string>
    <string name="dog_walker">Dog Walker</string>
    <string name="dog_owner">Dog Owner</string>
    <string name="from_contacts">From your contacts</string>
    <string name="from_owners_search">From active dog owners nearby</string>
    <string name="from_walkers_search">From active dog walkers nearby</string>
    <string name="dog_owners">Dog Owners</string>
    <string name="dog_walkers">Dog Walkers</string>
    <string name="either">Either</string>
    <string name="nearby">Nearby</string>
    <string name="anywhere">Anywhere</string>
    <string name="asap">ASAP</string>
    <string name="set_date_time">Set Day/Time</string>

    <string name="message_notification">New Message from</string>
    <string name="contact_notification">Contact Request from</string>
    <string name="walk_request_notification">Walk Request from</string>
    <string name="walk_request_accepted">Accepted Walk Request</string>
    <string name="walk_request_declined">Declined Walk Request</string>

    <!--Art Credit-->

    <!--shibu_inu_reading-->
    <string name="splash_screen_logo"><a href="https://www.freepik.com/vectors/baby">Baby vector created by catalyststuff - www.freepik.com</a></string>

    <!--dog_tongue-->
    <!--<a href="https://www.freepik.com/free-photos-vectors/baby">Baby vector created by catalyststuff - www.freepik.com</a>-->

    <!--shibu_inu_drinking-->
    <!--<a href='https://www.freepik.com/free-photos-vectors/coffee'>Coffee vector created by catalyststuff - www.freepik.com</a>-->

    <!--shibu_inu_astronaut-->
    <!--<a href='https://www.freepik.com/free-photos-vectors/star'>Star vector created by catalyststuff - www.freepik.com</a>-->

    <!--corgi_bone-->
    <!--<a href='https://www.freepik.com/free-photos-vectors/dog'>Dog vector created by catalyststuff - www.freepik.com</a>-->
</resources>