<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_view_profile"
        android:title="@string/view_profile"
        app:showAsAction="never" />
    <item android:id="@+id/action_view_messages"
        android:title="@string/view_messages"
        app:showAsAction="never" />
    <item android:id="@+id/action_edit_profile"
        android:title="@string/edit_profile"
        app:showAsAction="never" />
    <item android:id="@+id/action_edit_dogs"
        android:title="@string/edit_dogs"
        android:visible="false"
        app:showAsAction="never" />
    <item android:id="@+id/action_search_users"
        android:title="@string/find_users"
        app:showAsAction="never" />
    <item android:id="@+id/action_view_contacts"
        android:title="@string/view_contacts"
        app:showAsAction="never" />
    <item android:id="@+id/action_view_log"
        android:title="@string/view_walk_activity"
        app:showAsAction="never" />
    <item android:id="@+id/action_logout"
        android:title="@string/logout"
        app:showAsAction="never" />
</menu>