<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.SignUpLoginActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="@drawable/toolbar"
        android:elevation="4dp"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/DogWalker.ActionBar.Menu"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:src="@drawable/logo_transparent"
                android:layout_margin="3sp"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
            <TextView
                android:text="@string/app_name"
                android:textColor="@color/slate_blue"
                android:textStyle="bold"
                android:fontFamily="casual"
                android:textSize="24sp"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">
        <TextView
            android:id="@+id/instruction"
            android:text="@string/registration"
            android:textColor="@color/dark_green"
            android:textStyle="bold"
            android:textSize="28sp"
            android:layout_marginBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profile_name_layout"
            android:hint="@string/name_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/DogWalker.TextInputLayout">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profile_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_number_layout"
            android:hint="@string/phone_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/DogWalker.TextInputLayout">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_number"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/email_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/DogWalker.TextInputLayout">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/password_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/DogWalker.TextInputLayout">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/sign_up_login_button"
            android:text="@string/sign_up_button"
            android:onClick="signUpOrLogin"
            tools:ignore="UsingOnClickInXml"
            android:layout_marginTop="20dp"
            style="@style/DogWalker.Button" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/bottom_layout"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <TextView
            android:text="@string/go_to_login"
            android:textSize="18sp"
            android:textColor="@color/dark_green"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:text="@string/login_button"
            android:onClick="goToLogin"
            style="@style/DogWalker.Button"
            tools:ignore="UsingOnClickInXml" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>