<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".search.SearchUsersActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="@drawable/toolbar"
        android:elevation="4dp"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/DogWalker.ActionBar.Menu"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:src="@drawable/logo_transparent"
                android:layout_margin="3sp"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
            <TextView
                android:text="@string/search"
                android:textColor="@color/slate_blue"
                android:textStyle="bold"
                android:fontFamily="casual"
                android:textSize="24sp"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:id="@+id/search_filters"
        android:paddingTop="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar">
        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/search_filter_1"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioGroup
                android:id="@+id/user_type"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/dog_owners"
                    android:text="@string/dog_owners"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/dog_walkers"
                    android:text="@string/dog_walkers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/both"
                    android:text="@string/both"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/search_filter_2"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioGroup
                android:id="@+id/user_distance"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:layout_marginBottom="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/nearby"
                    android:text="@string/nearby"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/anywhere"
                    android:text="@string/anywhere"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RadioGroup>
            <CheckBox
                android:id="@+id/active_users"
                android:text="@string/active_users_only"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:background="@color/light_gray"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/divider" />
    <ImageView
        android:id="@+id/divider"
        android:src="@drawable/divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/search_filters" />
    <TextView
        android:id="@+id/search_no_results"
        android:text="@string/search_no_results"
        android:textSize="18sp"
        android:visibility="gone"
        android:paddingTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider" />
</androidx.constraintlayout.widget.ConstraintLayout>